--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
             <p class="descricao__texto">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
             <a class="container__botao secundario__botao" href="https://www.alura.com.br">Assine o Combo+</a>
         </div>
-        <img src="./assets/Telas.png" alt="">
+        <img class="secundario__imagem" src="./assets/Telas.png" alt="">
     </section>
 
-    <section class="container secundario">
-        <img src="./assets/Notebook.png" alt="">
+    <section class="container secundario responsivo">
+        <img class="secundario__imagem" src="./assets/Notebook.png" alt="">
         <div class="container__descricao">
             <h3 class="descricao__titulo">Baixe seus cursos</h2>
             <p class="descricao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
